--- a/web/tsconfig.json
+++ b/web/tsconfig.json
@@ -18,6 +18,7 @@
       "@/lib/*": ["src/lib/*"],
       "@/modules/*": ["src/modules/*"],
       "@/types/*": ["src/types/*"],
+      "@/config/*": ["src/config/*"],
       "@/app/*": ["app/*"],
       "@/tests/*": ["tests/*"]
     },
